# chevdev

./: .gitignore  .replit  .replit (copy)  <your-script-file>.py  AGENTS.md  CLAUDE.md  Dockerfile  GROK.md  LLM_HANDOFF_SUMMARY.md  WORKLOG_CONTEXT_PLAN.txt  application_data_for_1275063227.txt  application_data_for_router_adv_tg_user.txt  e -i HEAD~5  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  serpapi_recipes_results.txt  tsconfig.json
.grok/: settings.json
agentlogs/: agentlog010125  migration_live_20260223_dev-to-main.md
analysis/: nano_mongo_hollandaise_scan.py
attached_assets/: Pasted--usr-bin-env-python3-import-os-import-logging-Configure-logging-logging-basicConfig-level--1736291480447.txt
chat_history_logs/: 1275063227_history.json  offline_user_1_history.json  router_adv_tg_user_history.json  test_user_123_history.json  test_user_history.json
chef/: ## Copilot.md  AGENTS.md  CLAUDE.md  Dockerfile  chefwriter.py  commands.txt  firebase.py  firestore_chef.py  instructions_brainstorm.txt  instructions_log.txt  instructions_recipe.txt  main.py  message_router.py  message_user.py  orchastrator.py  perplexity.py  post_process.py  requirements.txt  sheetscall.py  telegram_bot.py  test.py  test_advanced_reasoning.py  test_constraint_discovery.py  test_conversation_flow.py  test_conversation_history.py  test_croissant_workflow.py  test_full_integration.py  test_new_reasoning.py  test_perplexity_pattern.py
codespace_gemini_browser_demo/: README.md  agent_notes.md  app.py  requirements.txt
interfacetest/: README.md  api_smoke.py  (+3 more)
(+345 files in other folders)
