[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "africanwhisper>=0.9.23",
    "firebase>=4.0.1",
    "firebase-admin>=7.1.0",
    "flask>=3.1.0",
    "google-auth>=2.37.0",
    "google-search-results>=2.4.2",
    "gspread>=6.1.4",
    "nest-asyncio>=1.6.0",
    "openai>=1.59.2",
    "pinecone>=8.0.0",
    "psutil>=6.1.1",
    "pymongo[srv]>=4.15.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[webhooks]>=22.5",
    "requests>=2.32.3",
    "serpapi>=0.1.5",
    "watchdog>=6.0.0",
]
